<resources>
    <string name="app_name">Chip-navbar</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>