<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/search"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomBar"/>

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/round_back_search"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/searchImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:src="@drawable/search_icon_selected" />

            <TextView
                android:id="@+id/searchTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/search"
                android:textColor="@color/search"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nearbyLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/nearbyImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:src="@drawable/nearby_icon_selected" />

            <TextView
                android:id="@+id/nearbyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/nearby"
                android:textColor="@color/nearby"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/chatLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chatImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="TODO"
                android:src="@drawable/chat_icon_selected" />

            <TextView
                android:id="@+id/chatTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/chat"
                android:textColor="@color/chat"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profileLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:src="@drawable/profile_icon_selected" />

            <TextView
                android:id="@+id/profileTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/profile"
                android:textColor="@color/profile"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>